--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,4 +1,13 @@
-FROM ubuntu:latest
-LABEL authors="yopepsi"
+FROM python:3.12-alpine
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /usr/src/cacheDonstu/api
+
+COPY requirements.txt .
+
+RUN pip install -r requirements.txt
+
+COPY . .
+
+ENV PYTHONPATH=/usr/src/cacheDonstu
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
