Add API Clients + Schedule Service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./api-gateway:/usr/src/cacheDonstu/api
       - ./proto:/usr/src/cacheDonstu/proto
+      - ./modules:/usr/src/cacheDonstu/modules
     depends_on:
       - schedule-service
   schedule-service:
