--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -10,4 +10,4 @@ COPY . .
 
 ENV PYTHONPATH=/usr/src/cacheDonstu
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
